try to fix menu on iphone

--- a/wp-content/themes/amnesty/sass/_header.sass
+++ b/wp-content/themes/amnesty/sass/_header.sass
@@ -191,7 +191,7 @@ body.toggled
 
       @media (max-width: $breakpoint3)
         flex-flow: column
-        left: 50% !important
+        transform: translateX(0%)
         height: auto
         left: auto
         position: relative
